Fixed footer overflow

--- a/client/views/layout/layout.scss
+++ b/client/views/layout/layout.scss
@@ -1,3 +1,11 @@
 footer.page-footer {
   margin-top: 0;
+
+  .designed-by {
+    padding: 15px 0;
+
+    a {
+      font-weight: 600;
+    }
+  }
 }
